# SeniorDesign

./: Descriptions.txt  Link to sdp  Link to sdp.c  README  README.md  README.md~  status.ui  story.ui  title.ui
Documents/: .~lock.Design Document.odt#  Descriptions.odt  Design Document.odt
sdp/: .anjuta_sym_db.db  AUTHORS  Makefile.am  Makefile.in  README  README.md  README.md~  README~  aclocal.m4  configure  configure.ac
sdp/.anjuta/: default.profile
sdp/.anjuta/session/: anjuta.session  dock-layout.xml
sdp/Debug/: Makefile  config.h  config.status  libtool
sdp/Debug/po/: Makefile  Makefile.in  POTFILES
sdp/Debug/src/: Makefile~  sdp
sdp/Debug/src/.deps/: main.Po  sdp.Po
sdp/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
sdp/src/: Makefile.am  Makefile.in  main.c  main.c~  sdp.c  sdp.c~  sdp.h  sdp.ui  status.ui  story.ui  title.ui
